--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-    <template>nav.html</template>
+    <div style='height:52px' page='nav.html'><progress/></div>
     <div class="c">
         <div class="maxwmd w r">
             <div class="cs g">
