--- a/leafcss.html
+++ b/leafcss.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="leafapp.css">
 </head>
 <body>
-    <template>nav.html</template>
+    <div style='height:52px' page='nav.html'><progress/></div>
     <div class="c">
         <div class="maxwmd w">
             <h1>LeafApp way of using CSS</h1>
