--- a/nav.html
+++ b/nav.html
@@ -1,8 +1,8 @@
 <nav class="p">
     <a href="/">LeafApp</a> |
-    <a href="/docs.html">Docs</a> &gt;
-    <a href="/go.html">Go</a> +
-    <a href="/leafjs.html">Leaf.js</a> +
-    <a href="/leafcss.html">Leaf.css</a>
+    <a href="docs.html">Docs</a> &gt;
+    <a href="go.html">Go</a> +
+    <a href="leafjs.html">Leaf.js</a> +
+    <a href="leafcss.html">Leaf.css</a>
 </nav>
 <hr>
