--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-    <div style='height:52px' page='nav.html'><progress/></div>
+    <div style='height:52px' page='nav.html'><progress></progress></div>
     <div class="c">
         <div class="maxwmd w r">
             <div class="cs g">
@@ -41,6 +41,9 @@
                         <a href="https://go.dev">Go</a> + <a href="leafapp.css">leafapp.css</a> + <a href="leafapp.js">leafapp.js</a>
                     </i>
                 </p>
+                <p>
+                    <a href="https://htmx.org">HTMX</a> Simplified
+                </p>
             </div>
             <fieldset class="p m">
                 <legend>Install via CDN
@@ -49,6 +52,91 @@
                 <textarea rows="4" cols="38" id="install-code" disabled>&lt;link rel="stylesheet" href="https://stevenzack.github.io/leafapp/leafapp.css"&gt;
 &lt;script defer src="https://stevenzack.github.io/leafapp/leafapp.js"&gt;&lt;/script&gt;</textarea>
             </fieldset>
+        </div>
+        <div class="maxwmd w">
+            <hr>
+            <h2 style="text-align: center;">
+                Simple Todos Example
+            </h2>
+<fieldset>
+    <legend>main.go</legend>
+    <pre>
+type Todo struct {
+    Id   string
+    Name string
+}
+
+var todos []Todo
+
+func main() {
+    t, e := template.ParseGlob("*.html")
+    if e != nil {
+        log.Panic(e)
+        return
+    }
+
+    http.HandleFunc("/", func(w http.ResponseWriter, r *http.Request) {
+        switch r.Method {
+        case http.MethodGet:
+            t.ExecuteTemplate(w, "index.html", todos)
+        case http.MethodPost:
+            todos = append(todos, Todo{
+                Id:   strconv.Itoa(len(todos)),
+                Name: r.FormValue("name"),
+            })
+        case http.MethodPatch:
+            for i, v := range todos {
+                if v.Id == r.FormValue("id") {
+                    todos[i].Name = r.FormValue("name")
+                    return
+                }
+            }
+        case http.MethodDelete:
+            var out []Todo
+            for _, v := range todos {
+                if v.Id != r.FormValue("id") {
+                    out = append(out, v)
+                }
+            }
+        }
+    })
+    http.ListenAndServe(":8080", nil)
+}  
+    </pre>
+</fieldset>
+
+<fieldset>
+    <legend>index.html</legend>
+<pre>
+&lt;form action="/" method="post"&gt;
+    &lt;input type="text" name="name"&gt;
+    &lt;input type="submit" value="submit"&gt;
+&lt;/form&gt;
+&lt;hr&gt;
+&lt;table border="1"&gt;
+    {{range .}}
+    &lt;tr&gt;
+        &lt;td&gt;
+            {{.Name}}
+        &lt;/td&gt;
+        &lt;td&gt;
+            &lt;details&gt;
+                &lt;summary&gt;Edit&lt;/summary&gt;
+                &lt;form action="/" method="patch"&gt;
+                    &lt;input type="hidden" name="id" value="{{.Id}}"&gt;
+                    &lt;input type="text" name="name" value="{{.Name}}" placeholder="name" size="6"&gt;&lt;br&gt;
+                    &lt;input type="submit" value="edit"&gt;
+                &lt;/form&gt;
+            &lt;/details&gt;
+        &lt;/td&gt;
+        &lt;td&gt;
+            &lt;button href-delete="/?id={{.Id}}"&gt;Delete&lt;/button&gt;
+        &lt;/td&gt;
+    &lt;/tr&gt;
+    {{end}}
+&lt;/table&gt;
+</pre>
+</fieldset>
         </div>
     </div>
 </body>
